samples/_failures_safe/1761005073_c8e411_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f240ed4.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_3f240ed4.c:171:5: error: expected declaration or statement at end of input
  171 |     }
      |     ^
